# warehouse-queue

./: .dockerignore  .env.example  .fuse_hidden0000000500000001  .fuse_hidden0000000500000002  .gitignore  CODE_REVIEW.md  DOCKER.md  DOCUMENTATION.md  Dockerfile  INSTALL-NATIVE.md  QUICKSTART.md  README.md  database.js  db-adapter.js  deploy.sh  docker-compose.yml  package-lock.json  package.json  server.js  setup-github.sh
.github/workflows/: deploy.yml  go-build.yml  rust-build.yml
deploy/: auto-deploy-native.sh  auto-deploy.sh  bootstrap.sh  deploy-go.sh  deploy-rust.sh  fix-pg-sequences.sql  init-letsencrypt.sh  install-go-server.sh  install-native-pg.sh  install-native.sh  install-rust-server.sh  server-setup.sh
deploy/nginx/: app.conf.template
go-service/: README.md  db.go  extras.go  extras2.go  go.mod  handlers.go  main.go  migrate.go  onec.go  redis.go
private/: storekeeper.html
public/: index.html  manager.html  style.css
rust-service/: Cargo.toml  README.md
rust-service/src/: db.rs  main.rs
