[package]
name = "warehouse-queue-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
postgres = "0.19"
sha2 = "0.10"
hex = "0.4"
ureq = { version = "2", features = ["json", "tls"] }
chrono = "0.4"

[[bin]]
name = "warehouse-rs"
path = "src/main.rs"

[profile.release]
opt-level = 2
